[package]
name = "s3-log-combiner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
rusoto_core = "0.48.0"
rusoto_s3 = "0.48.0"
async-trait = "0.1.50"
futures = "0.3"
bytes = "1.0"
tokio-stream = "0.1.6"
futures-util = "0.3"
clap = {  version= "4", features = ["env", "derive"] }
chrono = "0.4.33"
percent-encoding = "2.3.1"
base64 = "0.21.7"